Ui and view upgraded
Co-Authored-By: Partha Protim Paul <partha-sust16@users.noreply.github.com>

--- a/EasyRent/app/src/main/res/drawable/buutonshape.xml
+++ b/EasyRent/app/src/main/res/drawable/buutonshape.xml
@@ -7,9 +7,9 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#228bab"
-        android:startColor="#E8E8E8"
-        android:endColor="#2496bf"
+        android:centerColor="#F3DFDFDF"
+        android:startColor="#FAFAFA"
+        android:endColor="#A7ADAD"
         android:type="linear"
         />
     <padding
