--- a/EasyRent/app/src/main/res/layout/activity_search__add.xml
+++ b/EasyRent/app/src/main/res/layout/activity_search__add.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="60dp"
         android:textStyle="bold"
         android:textSize="30sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/grey"
         android:layout_marginBottom="50dp"
 
         />
@@ -24,26 +24,25 @@
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:inputType="text"
-        android:background="#e69be0ec"
-        android:shadowColor="#e69be0ec"
+        android:background="@color/lgrey"
+        android:shadowColor="@color/lgrey"
         android:hint="Type Area Name"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:layout_marginBottom="20dp"
         android:id="@+id/search_text"/>
     <Button
         android:layout_gravity="center_horizontal"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
-        android:textSize="20sp"
-        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        android:textColor="@color/Black"
         android:shadowColor="#A8A8A8"
         android:shadowRadius="5"
         android:shadowDx="0"
         android:shadowDy="0"
-        android:textStyle="bold"
         android:text="Search"
         android:background="@drawable/buutonshape"
         android:layout_marginTop="20dp"
