--- a/EasyRent/app/src/main/res/layout/activity_sign_up.xml
+++ b/EasyRent/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,7 @@
         android:text="Registration"
         android:textStyle="bold"
         android:textSize="30sp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/grey"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="30dp"
@@ -27,8 +27,8 @@
         android:inputType="text"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="#e69be0ec"
-        android:shadowColor="#e69be0ec"
+        android:background="@color/lgrey"
+        android:shadowColor="@color/lgrey"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="15dp"
@@ -39,8 +39,8 @@
         android:inputType="text"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="#e69be0ec"
-        android:shadowColor="#e69be0ec"
+        android:background="@color/lgrey"
+        android:shadowColor="@color/lgrey"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:id="@+id/email_id"
@@ -52,8 +52,8 @@
         android:id="@+id/password_id"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="#e69be0ec"
-        android:shadowColor="#e69be0ec"
+        android:background="@color/lgrey"
+        android:shadowColor="@color/lgrey"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:hint="Enter your password"
@@ -65,8 +65,8 @@
         android:hint="Enter Address"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="#e69be0ec"
-        android:shadowColor="#e69be0ec"
+        android:background="@color/lgrey"
+        android:shadowColor="@color/lgrey"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:id="@+id/address_id"
@@ -78,17 +78,18 @@
         android:inputType="text"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:background="#e69be0ec"
-        android:shadowColor="#e69be0ec"
+        android:background="@color/lgrey"
+        android:shadowColor="@color/lgrey"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:id="@+id/phone_id"
         android:hint="Enter Phone No"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:text="SignUp"
+        android:textColor="@color/Black"
         android:id="@+id/resitration"
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
