--- a/EasyRent/app/src/main/res/layout/activity_update_delete.xml
+++ b/EasyRent/app/src/main/res/layout/activity_update_delete.xml
@@ -22,7 +22,7 @@
                 android:text="Manage Post"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
@@ -35,8 +35,8 @@
                 android:id="@+id/utype"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -48,8 +48,8 @@
                 android:id="@+id/uowner"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -63,8 +63,8 @@
                 android:id="@+id/urent_house"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -77,8 +77,8 @@
                 android:id="@+id/urent_road"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -91,8 +91,8 @@
                 android:id="@+id/urent_area"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"/>
@@ -104,8 +104,8 @@
                 android:id="@+id/urent_phone"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -119,8 +119,8 @@
                 android:hint="Email"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -133,8 +133,8 @@
                 android:hint="Rent Price"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -146,8 +146,8 @@
                 android:hint=""
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -158,23 +158,23 @@
                 android:id="@+id/ulongi"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="#e69be0ec"
-                android:shadowColor="#e69be0ec"
+                android:background="@color/lgrey"
+                android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:hint=""
                 />
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:text="Update"
                 android:background="@drawable/buutonshape"
                 android:id="@+id/update_btn"/>
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/buutonshape"
