--- a/EasyRent/app/src/main/res/layout/activity_manage__post.xml
+++ b/EasyRent/app/src/main/res/layout/activity_manage__post.xml
@@ -13,7 +13,7 @@
         android:text="Long Press to manage post"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/grey"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
