--- a/EasyRent/app/src/main/res/layout/activity_owner_profile.xml
+++ b/EasyRent/app/src/main/res/layout/activity_owner_profile.xml
@@ -17,7 +17,7 @@
         android:textSize="25sp"
         android:text="OwnerInformation"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/grey"
         android:id="@+id/tvOwnerInfo"
 
         />
