--- a/EasyRent/app/src/main/res/layout/activity_user__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user__login.xml
@@ -19,65 +19,64 @@
 
             android:src="@drawable/logo"/>
         <EditText
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:inputType="text"
-            android:background="#e69be0ec"
-            android:shadowColor="#e69be0ec"
+            android:background="@color/lgrey"
+            android:shadowColor="@color/lgrey"
             android:hint="@string/user_name"
             android:id="@+id/user_email"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:layout_marginBottom="20dp"
             />
         <EditText
             android:paddingLeft="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:id="@+id/user_password"
             android:inputType="textPassword"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
             android:layout_marginBottom="20dp"
-            android:background="#e69be0ec"
-            android:shadowColor="#e69be0ec"
+            android:background="@color/lgrey"
+            android:shadowColor="@color/lgrey"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:hint="@string/user_pasword"
             android:layout_marginTop="10dp"/>
         <Button
-            android:layout_width="200dp"
-            android:layout_height="70dp"
-            android:textSize="25sp"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:textSize="15sp"
             android:layout_gravity="center_horizontal"
             android:text="@string/sign_in"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/Black"
             android:id="@+id/user_signin"
             android:shadowColor="#A8A8A8"
             android:shadowRadius="5"
             android:shadowDx="0"
             android:shadowDy="0"
-            android:textStyle="bold"
             android:background="@drawable/buutonshape"
             android:layout_marginTop="20dp"/>
         <Button
             android:id="@+id/user_signup"
             android:layout_gravity="center_horizontal"
-            android:layout_width="200dp"
-            android:layout_height="70dp"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:textSize="15sp"
+            android:textColor="@color/Black"
             android:shadowColor="#A8A8A8"
             android:shadowRadius="5"
             android:shadowDx="0"
             android:shadowDy="0"
-            android:textStyle="bold"
             android:text="SIGN UP"
             android:background="@drawable/buutonshape"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             />
 
 
