--- a/EasyRent/app/src/main/res/layout/activity_user_catagory.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user_catagory.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="60dp"
             android:textStyle="bold"
             android:textSize="30sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/grey"
             android:layout_marginBottom="45dp"
 
             />
@@ -34,39 +34,20 @@
             android:id="@+id/need_house"
             android:layout_gravity="center_horizontal"
 
-            android:background="@drawable/renterbutton"
+            android:background="@drawable/r2"
 
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Need a house"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark"
             />
 
         <Button
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:background="@drawable/ownerbutton"
+            android:background="@drawable/hw2"
             android:id="@+id/house_owner"
             android:layout_gravity="center_horizontal"
             android:paddingTop="10dp"
             android:layout_marginTop="30dp"
             android:paddingBottom="10dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="House Owner"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            />
 
     </LinearLayout>
 
