--- a/EasyRent/app/src/main/res/layout/recyleviewadapter.xml
+++ b/EasyRent/app/src/main/res/layout/recyleviewadapter.xml
@@ -17,7 +17,7 @@
             <TextView
                 android:layout_marginTop="20dp"
                 android:textSize="20sp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:paddingLeft="5dp"
                 android:layout_width="match_parent"
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:id="@+id/rent_feeid"
                 android:layout_gravity="center_horizontal"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:id="@+id/renter_nameid"
                 android:layout_gravity="center_horizontal"
@@ -53,7 +53,7 @@
                 android:id="@+id/phone_rentid"
                 android:textSize="18sp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="01832541824"/>
@@ -63,7 +63,7 @@
                 android:id="@+id/emal_rentid"
                 android:textSize="18sp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="test@xyz.com"/>
@@ -73,7 +73,7 @@
                 android:id="@+id/rent_areaid"
                 android:textSize="18sp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="place"/>
@@ -83,7 +83,7 @@
                 android:id="@+id/rent_key"
                 android:textSize="5sp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="key"/>
