I hate UI update -_-
Co-Authored-By: fahim <bdafahim@users.noreply.github.com>

--- a/EasyRent/app/src/main/res/layout/activity_post__add.xml
+++ b/EasyRent/app/src/main/res/layout/activity_post__add.xml
@@ -5,13 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Post_Add"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/WhiteSmoke">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textStyle="bold"
     android:textAlignment="center"
     android:text="Post for RENT"
+    android:fontFamily="monospace"
     android:textColor="@color/grey"
     android:textSize="30sp"
     android:padding="15dp"
@@ -27,13 +29,11 @@
         android:layout_height="wrap_content"
         android:text="Single Seat"
         android:textStyle="italic"
-        android:textColor="@color/grey"
         android:id="@+id/single_seat"
         />
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/grey"
         android:textStyle="italic"
         android:text="Full Flat"
         android:id="@+id/full_flat"/>
@@ -56,7 +56,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="Enter House Owner Name"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -70,7 +72,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="House No."
                 android:inputType="text"
                 android:paddingTop="10dp"
@@ -84,7 +88,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="Road No"
                 android:inputType="text"
                 android:paddingTop="10dp"
@@ -98,7 +104,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="Area"
                 android:inputType="text"
                 android:paddingTop="10dp"
@@ -112,7 +120,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="Phone No"
                 android:inputType="number"
                 android:paddingTop="10dp"
@@ -126,7 +136,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="Email"
                 android:inputType="text"
                 android:paddingTop="10dp"
@@ -140,7 +152,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/lgrey"
+                android:textSize="20dp"
+                android:background="@drawable/edit_round_button"
+                android:paddingLeft="10dp"
                 android:hint="Rent Price"
                 android:inputType="text"
                 android:paddingTop="10dp"
