--- a/EasyRent/app/src/main/res/values/colors.xml
+++ b/EasyRent/app/src/main/res/values/colors.xml
@@ -114,6 +114,7 @@
     <color name="SlateBlue">#6A5ACD</color>
     <color name="DimGray">#696969</color>
     <color name="MediumAquamarine">#66CDAA</color>
+    <color name="TEST">#0D47A1</color>
     <color name="CornflowerBlue">#6495ED</color>
     <color name="CadetBlue">#5F9EA0</color>
     <color name="DarkOliveGreen">#556B2F</color>
