--- a/EasyRent/app/src/main/res/layout/activity_manage__post.xml
+++ b/EasyRent/app/src/main/res/layout/activity_manage__post.xml
@@ -11,12 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Long Press to manage post"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/grey"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="monospace"
         />
 
     <ScrollView
