--- a/EasyRent/app/src/main/res/layout/activity_owner__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_owner__login.xml
@@ -24,9 +24,10 @@
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:background="@color/lgrey"
             android:shadowColor="@color/lgrey"
+            android:drawableLeft="@drawable/name_register"
             android:hint="@string/user_name"
             android:id="@+id/owner_email"
             android:paddingTop="10dp"
@@ -47,7 +48,8 @@
             android:shadowColor="@color/lgrey"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:hint="@string/user_pasword"
+            android:hint= "@string/user_pasword"
+            android:drawableLeft="@drawable/key"
             android:layout_marginTop="10dp"/>
         <Button
             android:layout_width="150dp"
