--- a/EasyRent/app/src/main/res/layout/activity_update_delete.xml
+++ b/EasyRent/app/src/main/res/layout/activity_update_delete.xml
@@ -20,13 +20,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Manage Post"
-                android:textSize="30sp"
+                android:paddingTop="20dp"
+                android:textSize="25dp"
+                android:shadowColor="@color/GhostWhite"
+                android:textColorHighlight="@color/MintCream"
+                android:paddingBottom="20dp"
                 android:textStyle="bold"
-                android:textColor="@color/grey"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
-
+                android:fontFamily="monospace"
+                android:layout_gravity="center"
                 />
 
             <EditText
@@ -35,12 +36,15 @@
                 android:id="@+id/utype"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:hint="Enter User Type"
+                android:paddingLeft="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
+                android:background="@drawable/edit_round_button"
+                android:hint="Enter House Type"
                 />
             <EditText
                 android:layout_width="match_parent"
@@ -48,12 +52,15 @@
                 android:id="@+id/uowner"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:hint="Enter House Owner Name"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 />
             <EditText
                 android:layout_width="match_parent"
@@ -63,11 +70,14 @@
                 android:id="@+id/urent_house"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:inputType="text"/>
 
             <EditText
@@ -77,11 +87,14 @@
                 android:id="@+id/urent_road"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:inputType="text"/>
             <EditText
                 android:layout_width="match_parent"
@@ -91,11 +104,14 @@
                 android:id="@+id/urent_area"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -104,12 +120,14 @@
                 android:id="@+id/urent_phone"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 />
             <EditText
                 android:layout_width="match_parent"
@@ -119,8 +137,11 @@
                 android:hint="Email"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
@@ -133,11 +154,14 @@
                 android:hint="Rent Price"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 />
             <EditText
                 android:layout_width="match_parent"
@@ -146,24 +170,30 @@
                 android:hint=""
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/ulongi"
+                android:paddingLeft="10dp"
+                android:background="@drawable/edit_round_button"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="@color/lgrey"
                 android:shadowColor="@color/lgrey"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:hint=""
+                android:id="@+id/ulongi"
                 />
             <Button
                 android:layout_width="150dp"
