--- a/EasyRent/app/src/main/res/layout/recyleviewadapter.xml
+++ b/EasyRent/app/src/main/res/layout/recyleviewadapter.xml
@@ -12,7 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/GhostWhite">
+            android:background="#fff"
+            >
 
             <TextView
                 android:layout_marginTop="20dp"
@@ -24,6 +25,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/type_id"
                 android:layout_gravity="center_horizontal"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:text="Single Seat"/>
             <TextView
                 android:layout_width="match_parent"
@@ -34,6 +37,8 @@
                 android:layout_marginBottom="5dp"
                 android:id="@+id/rent_feeid"
                 android:layout_gravity="center_horizontal"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:text="555"/>
             <TextView
@@ -44,6 +49,8 @@
                 android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
                 android:id="@+id/renter_nameid"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:layout_gravity="center_horizontal"
                 android:text="XYZ"
                 />
@@ -55,6 +62,8 @@
                 android:paddingLeft="5dp"
                 android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:layout_gravity="center_horizontal"
                 android:text="01832541824"/>
             <TextView
@@ -64,6 +73,8 @@
                 android:textSize="18sp"
                 android:paddingLeft="5dp"
                 android:textColor="@color/grey"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal"
                 android:text="test@xyz.com"/>
@@ -75,13 +86,15 @@
                 android:paddingLeft="5dp"
                 android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
+                android:textStyle="bold"
+                android:fontFamily="monospace"
                 android:layout_gravity="center_horizontal"
                 android:text="place"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rent_key"
-                android:textSize="5sp"
+                android:textSize="3sp"
                 android:paddingLeft="5dp"
                 android:textColor="@color/grey"
                 android:layout_marginBottom="5dp"
