--- a/EasyRent/app/src/main/res/drawable/edit_round_button.xml
+++ b/EasyRent/app/src/main/res/drawable/edit_round_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#fff"/>
+    <solid android:color="@color/lgrey"/>
     <corners android:radius="20dp"/>
 
 </shape>
