--- a/EasyRent/app/src/main/res/layout/activity_profile_user.xml
+++ b/EasyRent/app/src/main/res/layout/activity_profile_user.xml
@@ -13,14 +13,15 @@
         android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="My Profile"
         android:paddingTop="20dp"
-        android:textSize="25dp"
-        android:shadowColor="@color/GhostWhite"
-        android:textColorHighlight="@color/MintCream"
+        android:textSize="25sp"
+        android:textColor="@color/Black"
+        android:shadowColor="@color/Black"
         android:paddingBottom="20dp"
         android:textStyle="bold"
         android:fontFamily="monospace"
@@ -44,23 +45,25 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:hint="Name"
-        android:textSize="20dp"
+        android:textColor="@color/Black"
+        android:textSize="17sp"
         android:layout_marginTop="20dp"
         android:paddingLeft="15dp"
         android:id="@+id/show_name"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="monospace"
 
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textColor="@color/Black"
         android:hint="Address"
-        android:textSize="20dp"
+        android:textSize="17sp"
         android:layout_marginTop="20dp"
         android:paddingLeft="15dp"
         android:id="@+id/show_address"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="monospace"
 
         />
     <TextView
@@ -68,11 +71,12 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:hint="Phone"
-        android:textSize="20dp"
+        android:textSize="17sp"
+        android:textColor="@color/Black"
         android:layout_marginTop="20dp"
         android:paddingLeft="15dp"
         android:id="@+id/show_phone"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="monospace"
 
         />
     <TextView
@@ -80,11 +84,12 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:hint="Email"
-        android:textSize="20dp"
+        android:textSize="17sp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/Black"
         android:paddingLeft="15dp"
         android:id="@+id/show_email"
-        android:fontFamily="sans-serif-smallcaps"
+        android:fontFamily="monospace"
         />
     </LinearLayout>
 
@@ -104,8 +109,8 @@
             android:layout_alignParentBottom="true"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            rfab:rfab_color_normal="#00bfff"
-            rfab:rfab_color_pressed="#263238"
+            rfab:rfab_color_normal="#F8F75E5E"
+            rfab:rfab_color_pressed="@color/Light"
             rfab:rfab_drawable="@drawable/circle_ba"
             rfab:rfab_shadow_color="#999999"
             rfab:rfab_shadow_dx="0dp"
