--- a/EasyRent/app/src/main/res/drawable/edit_text_post.xml
+++ b/EasyRent/app/src/main/res/drawable/edit_text_post.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@color/WhiteSmoke"/>
     <corners android:radius="20dp"/>
-    <stroke android:color="@color/colorAccent"
+    <stroke android:color="@color/colorPrimaryDark"
         android:width="3dp"/>
 </shape>
