--- a/EasyRent/app/src/main/res/layout/activity_owner__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_owner__login.xml
@@ -27,7 +27,7 @@
             android:inputType="textEmailAddress"
             android:background="@color/lgrey"
             android:shadowColor="@color/lgrey"
-            android:drawableLeft="@drawable/name_register"
+            android:drawableLeft="@mipmap/mail"
             android:hint="@string/user_name"
             android:id="@+id/owner_email"
             android:paddingTop="10dp"
@@ -49,15 +49,16 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:hint= "@string/user_pasword"
-            android:drawableLeft="@drawable/key"
+            android:drawableLeft="@mipmap/password1"
             android:layout_marginTop="10dp"/>
         <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:textAllCaps="false"
             android:textSize="15sp"
             android:layout_gravity="center_horizontal"
             android:text="@string/sign_in"
-            android:textColor="@color/Black"
+            android:textColor="@color/WhiteSmoke"
             android:id="@+id/owner_signin"
             android:shadowColor="#A8A8A8"
             android:shadowRadius="5"
@@ -71,12 +72,13 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:textSize="15sp"
-            android:textColor="@color/Black"
+            android:textColor="@color/WhiteSmoke"
+            android:textAllCaps="false"
             android:shadowColor="#A8A8A8"
             android:shadowRadius="5"
             android:shadowDx="0"
             android:shadowDy="0"
-            android:text="SIGN UP"
+            android:text="Sign Up"
             android:background="@drawable/buutonshape"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
