--- a/EasyRent/app/src/main/res/layout/activity_profile_update.xml
+++ b/EasyRent/app/src/main/res/layout/activity_profile_update.xml
@@ -10,6 +10,7 @@
     android:background="@color/MintCream">
 
     <TextView
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -102,15 +103,18 @@
 
     <Button
         android:id="@+id/update_profile"
-        style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:text="update"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:background="@drawable/rounded_button"/>
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:textSize="15sp"
+        android:layout_gravity="center_horizontal"
+        android:text="Update"
+        android:textAllCaps="false"
+        android:textColor="@color/WhiteSmoke"
+        android:shadowColor="#A8A8A8"
+        android:shadowRadius="5"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:background="@drawable/buutonshape"
+        android:layout_marginTop="30dp"/>
 
 </LinearLayout>
