--- a/EasyRent/app/src/main/res/layout/activity_register.xml
+++ b/EasyRent/app/src/main/res/layout/activity_register.xml
@@ -37,7 +37,7 @@
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:background="@drawable/edit_round_button"
-            android:drawableLeft="@drawable/name_register"
+            android:drawableLeft="@mipmap/name"
             android:padding="5dp"
             android:drawablePadding="15dp"/>
            <!-- android:background="@drawable/edit_round_button"
@@ -48,7 +48,7 @@
 
 
         <EditText
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/registerAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
             android:maxLines="1"
             android:textSize="20dp"
             android:background="@drawable/edit_round_button"
-            android:drawableLeft="@drawable/address_register"
+            android:drawableLeft="@mipmap/address"
             android:padding="5dp"
             android:drawablePadding="15dp"/>
             <!--android:background="@drawable/edit_round_button"
@@ -67,7 +67,7 @@
 
 
         <EditText
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/registerPhoneNo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:background="@drawable/edit_round_button"
-            android:drawableLeft="@drawable/phone_register"
+            android:drawableLeft="@mipmap/phone"
             android:padding="5dp"
             android:drawablePadding="15dp"/>
             <!--android:background="@drawable/edit_round_button"
@@ -85,7 +85,7 @@
 
 
         <EditText
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/registermail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
             android:inputType="textEmailAddress"
             android:maxLines="1"
             android:background="@drawable/edit_round_button"
-            android:drawableLeft="@drawable/username_register"
+            android:drawableLeft="@mipmap/mail"
             android:padding="5dp"
             android:drawablePadding="15dp"/>
            <!-- android:background="@drawable/edit_round_button"
@@ -104,7 +104,7 @@
 
 
         <EditText
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/registerpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:background="@drawable/edit_round_button"
-            android:drawableLeft="@drawable/key"
+            android:drawableLeft="@mipmap/password"
             android:padding="5dp"
             android:drawablePadding="15dp"/>
            <!--
@@ -126,16 +126,20 @@
 
         <Button
             android:id="@+id/registersign_up_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginLeft="40dp"
-            android:text="Sign UP"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:background="@drawable/rounded_button"/>
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:textSize="15sp"
+            android:textAllCaps="false"
+            android:layout_gravity="center_horizontal"
+            android:text="Sign Up"
+            android:textColor="@color/WhiteSmoke"
+            android:textStyle="italic"
+            android:shadowColor="#A8A8A8"
+            android:shadowRadius="5"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:background="@drawable/buutonshape"
+            android:layout_marginTop="20dp"/>
            <!-- android:background="@drawable/rounded_button"-->
 
 
