--- a/EasyRent/app/src/main/res/layout/activity_user__login.xml
+++ b/EasyRent/app/src/main/res/layout/activity_user__login.xml
@@ -28,7 +28,7 @@
             android:shadowColor="@color/lgrey"
             android:hint="@string/user_name"
             android:id="@+id/user_email"
-            android:drawableLeft="@drawable/name_register"
+            android:drawableLeft="@mipmap/mail"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:layout_marginBottom="20dp"
@@ -47,7 +47,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:hint="@string/user_pasword"
-            android:drawableLeft="@drawable/key"
+            android:drawableLeft="@mipmap/password1"
             android:layout_marginTop="10dp"/>
         <Button
             android:layout_width="150dp"
@@ -55,7 +55,8 @@
             android:textSize="15sp"
             android:layout_gravity="center_horizontal"
             android:text="@string/sign_in"
-            android:textColor="@color/Black"
+            android:textColor="@color/WhiteSmoke"
+            android:textStyle="italic"
             android:id="@+id/user_signin"
             android:shadowColor="#A8A8A8"
             android:shadowRadius="5"
@@ -68,8 +69,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:textStyle="italic"
             android:textSize="15sp"
-            android:textColor="@color/Black"
+            android:textColor="@color/WhiteSmoke"
             android:shadowColor="#A8A8A8"
             android:shadowRadius="5"
             android:shadowDx="0"
