--- a/EasyRent/app/src/main/res/values/colors.xml
+++ b/EasyRent/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="Light">#FDDCDC</color>
     <color name="colorPrimary">#B40A0A</color>
     <color name="colorPrimaryDark">#A71111</color>
     <color name="colorAccent">#FF4081</color>
