--- a/EasyRent/app/src/main/res/values/styles.xml
+++ b/EasyRent/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/CornflowerBlue</item>
-        <item name="colorPrimaryDark">@color/TEST</item>
+        <item name="colorPrimary">#B40A0A</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="AppTheme.NoActionBar">
